# confide

./: .env.example  .gitignore  .release-please-config.json  .release-please-manifest.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  biome.json  package.json  release-please-config.json
.github/: pull_request_template.md  release.yml
.github/workflows/: ci.yml  docker-publish.yml  release-client-arch.yml  release-client-macos.yml  release-client-ubuntu.yml  release-client-windows.yml  release-client.yml  release-please.yml
.husky/: pre-commit
apps/central/: .env.example  CHANGELOG.md  Cargo.toml
apps/central/migrations/: 001_init.sql  002_add_message_edited_at.sql  003_federation.sql  004_user_servers.sql  005_calls.sql  006_call_leave_rejoin.sql  007_audio_settings.sql  008_message_type.sql  009_user_preferences.sql  010_add_snow_effect_preference.sql  011_add_pinned_at_to_messages.sql  012_groups.sql  013_performance_indexes.sql  014_activities_spotify.sql  015_heartbeat_nonces.sql  016_add_gif_preview_url.sql  017_file_attachments.sql  018_uploads_s3.sql  019_conversation_hidden.sql  020_group_calls.sql
apps/central/src/: config.rs  crypto.rs  error.rs  main.rs  s3.rs  spotify_worker.rs
apps/central/src/api/: activities.rs  attachments.rs  audio_settings.rs  auth.rs  calls.rs  conversations.rs  discovery.rs  federation.rs  friends.rs  gifs.rs  group_calls.rs  keys.rs  messages.rs  middleware.rs  mod.rs  preferences.rs  profiles.rs  rate_limit.rs  recovery.rs  servers.rs  spotify.rs  uploads.rs
apps/central/src/db/: activities.rs  attachments.rs  audio_settings.rs  cache.rs  calls.rs  cleanup.rs  conversations.rs  discovery.rs  federation.rs  friends.rs  gifs.rs  group_calls.rs  messages.rs  mod.rs  preferences.rs  profiles.rs  servers.rs  sessions.rs  spotify.rs  uploads.rs  users.rs
apps/central/src/media/: mod.rs  relay.rs
apps/central/src/models/: activity.rs  audio_settings.rs  call.rs  conversation.rs  federation.rs  gif.rs  message.rs  mod.rs  preferences.rs  profile.rs  session.rs  upload.rs  user.rs
apps/central/src/ws/: call_recovery.rs  handler.rs  mod.rs  pubsub.rs  subscriptions.rs
apps/client/: .env.development  .env.production  CHANGELOG.md  eslint.config.mjs  index.html  package.json  tailwind.config.js  vite.config.ts
apps/client/src/: App.css  App.tsx  config.ts  main.tsx
apps/client/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json  macos.json
apps/client/src-tauri/icons/: icon.icns
apps/client/src-tauri/src/: crypto.rs  lib.rs  main.rs  notifications.rs
apps/client/src-tauri/src/call/: audio.rs  h264.rs  jitter.rs  mod.rs  screen.rs  settings.rs  state.rs  transport.rs  video_decoder.rs
apps/client/src-tauri/src/group_call/: audio_mixer.rs  crypto.rs  mod.rs  speaking.rs
apps/client/src/api/: audioSettings.ts  auth.ts  baseWebSocket.ts  calls.ts  client.ts  conversations.ts  crypto.ts  discovery.ts  federatedServer.ts  federatedWs.ts  federation.ts  friends.ts  index.ts  keys.ts  messages.ts  preferences.ts  profiles.ts  recovery.ts  servers.ts  tenor.ts  types.ts  uploads.ts  websocket.ts
apps/client/src/components/: ErrorBoundary.tsx  NotificationSettings.tsx
apps/client/src/context/: AuthContext.tsx  ChatContext.tsx  PresenceContext.tsx  ServerContext.tsx
apps/client/src/hooks/: index.ts  useCacheSync.ts  useChatMessages.ts  useDecryptedMessages.ts  useDropzone.ts  useFriends.ts  useGroups.ts  useIdleDetection.ts  useKeyboardShortcuts.ts  useOnboarding.ts  usePrefetchConversation.ts  usePushToTalk.ts  useQueries.ts  useUnreadBadges.ts  useUserActivity.ts
apps/client/src/lib/: fontawesome.ts  themes.ts
apps/client/src/pages/: Chat.tsx  Friends.tsx  Login.tsx  ProfileTab.tsx  RecoveryKit.tsx  Register.tsx  ResetPassword.tsx  Settings.tsx
apps/client/src/services/: notificationService.ts
apps/client/src/types/: common.ts  index.ts  servers.ts  ui.ts
apps/client/src/utils/: MessageQueue.ts  fileValidation.ts  formatters.ts  messageUtils.ts  notifications.ts  performance.ts  safeJson.ts  sanitize.ts
apps/landing/: package.json
apps/landing/app/: globals.css  layout.tsx  page.tsx
apps/landing/app/features/: layout.tsx  page.tsx
apps/landing/components/: navbar.tsx  smooth-scroll.tsx
apps/landing/components/compare/: comparison-page.tsx  comparison-table.tsx  constants.ts  index.ts
apps/landing/components/landing/: constants.ts  faq.tsx  features.tsx  footer.tsx  hero.tsx  index.ts  landing-page.tsx  video-player.tsx
apps/landing/public/: robots.txt  site.webmanifest  sitemap.xml
apps/server/: CHANGELOG.md  Cargo.toml  config.docker.toml  config.toml
apps/server/migrations/: 20241209000001_initial.sql  20241210000001_channel_keys.sql  20241211000001_server_password.sql  20251215151500_add_discovery_fields.sql  20251215153000_add_limits_retention.sql  20251217000001_performance_indexes.sql  20251226000001_channel_encryption.sql
apps/server/src/: cleanup_tasks.rs  config.rs  error.rs  main.rs
apps/server/src/api/: auth.rs  channels.rs  members.rs  messages.rs  middleware.rs  mod.rs  rate_limit.rs  roles.rs  server.rs  setup.rs
apps/server/src/db/: cache.rs  cache_lock.rs  channels.rs  members.rs  messages.rs  mod.rs  roles.rs  server_identity.rs  sessions.rs
apps/server/src/federation/: heartbeat.rs  identity.rs  mod.rs
apps/server/src/models/: channel.rs  member.rs  message.rs  mod.rs  role.rs  server_identity.rs  session.rs
apps/server/src/ws/: bounded_channel.rs  connection_limit.rs  handler.rs  manager.rs  mod.rs  types.rs
infrastructure/deployment/: .env.stack  central-compose.yml  central-stack.yml  docker-compose.template.yml  server-compose.yml
infrastructure/deployment/config/: Caddyfile  nginx.template.conf
infrastructure/docker/: Dockerfile.central  Dockerfile.server  docker-compose.yml
infrastructure/scripts/: install-central.sh  install-server.sh  setup-local.sh
(+328 files in other folders)
