[workspace]
resolver = "2"
members = ["apps/central", "apps/server", "apps/client/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Confide"]

[workspace.dependencies]
confide-sdk = { git = "https://github.com/confide-gg/Confide-SDK", default-features = false }

tokio = { version = "1.42", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-macros = "0.5"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
redis = { version = "0.27", features = ["tokio-comp"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
hex = "0.4"
sha2 = "0.10"
nanoid = "0.4"
rand = "0.8"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = "0.13"
hmac = "0.12"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
argon2 = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true