[package]
name = "confide-central"
version = "0.7.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
confide-sdk = { workspace = true, features = ["server"] }

tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
redis.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
hex.workspace = true
sha2.workspace = true
nanoid.workspace = true
rand.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
hmac.workspace = true
dotenvy.workspace = true

dashmap = "6.0"
bytes = "1.5"
rustls-pemfile = "2.2"
infer = "0.16"
