[package]
name = "confide-server"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
confide-sdk = { workspace = true, features = ["server"] }

tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-macros.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
redis.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
futures.workspace = true
async-trait.workspace = true
hex.workspace = true
sha2.workspace = true
nanoid.workspace = true
rand.workspace = true
reqwest.workspace = true
argon2.workspace = true
